--- a/android-twa/app/build.gradle
+++ b/android-twa/app/build.gradle
@@ -1,20 +1,5 @@
-/*
- * Copyright 2019 Google Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 import groovy.xml.MarkupBuilder
+import groovy.util.IndentPrinter
 
 plugins {
     id 'com.android.application'
@@ -26,153 +11,72 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
-def twaManifest = [
+/**
+ * Keep this manifest map only for values that we DO NOT duplicate in res/values.
+ * Strings MUST live in strings.xml (otherwise you’ll hit duplicate resource errors).
+ */
+def twaConfig = [
     applicationId: 'fun.radikals.app',
-    hostName: 'radikals.fun', // The domain being opened in the TWA.
-    launchUrl: '/?source=pwa', // The start path for the TWA. Must be relative to the domain.
-    name: 'Radikals', // The application name.
-    launcherName: 'Radikals', // The name shown on the Android Launcher.
-    themeColor: '#000000', // The color used for the status bar.
-    themeColorDark: '#000000', // The color used for the dark status bar.
-    navigationColor: '#000000', // The color used for the navigation bar.
-    navigationColorDark: '#000000', // The color used for the dark navbar.
-    navigationDividerColor: '#000000', // The navbar divider color.
-    navigationDividerColorDark: '#000000', // The dark navbar divider color.
-    backgroundColor: '#FFFFFF', // The color used for the splash screen background.
-    enableNotifications: true, // Set to true to enable notification delegation.
-    // Every shortcut must include the following fields:
-    // - name: String that will show up in the shortcut.
-    // - short_name: Shorter string used if |name| is too long.
-    // - url: Absolute path of the URL to launch the app with (e.g '/create').
-    // - icon: Name of the resource in the drawable folder to use as an icon.
-    shortcuts: [],
-    // The duration of fade out animation in milliseconds to be played when removing splash screen.
+
+    // Visuals (generated as @color via resValue)
+    themeColor: '#000000',
+    themeColorDark: '#000000',
+    navigationColor: '#000000',
+    navigationColorDark: '#000000',
+    navigationDividerColor: '#000000',
+    navigationDividerColorDark: '#000000',
+    backgroundColor: '#FFFFFF',
+
+    // Delegation + splash (generated as @bool/@integer via resValue)
+    enableNotifications: true,
     splashScreenFadeOutDuration: 300,
-    generatorApp: 'bubblewrap-cli', // Application that generated the Android Project
-    // The fallback strategy for when Trusted Web Activity is not available. Possible values are
-    // 'customtabs' and 'webview'.
-    fallbackType: 'customtabs',
-    enableSiteSettingsShortcut: 'true',
-    orientation: 'landscape',
+
+    // Optional (generated as @string via resValue IF you don’t define them in strings.xml)
+    fallbackType: 'webview', // keep consistent with Manifest FALLBACK_STRATEGY=webview
+    enableSiteSettingsShortcut: true,
+
+    // App shortcuts (optional)
+    shortcuts: []
 ]
 
 android {
-    compileSdkVersion 36
+    // Android 16 = API 36 :contentReference[oaicite:2]{index=2}
+    compileSdk 36
+
     namespace "fun.radikals.app"
+
     defaultConfig {
-        applicationId "fun.radikals.app"
-        minSdkVersion 21
-        targetSdkVersion 35
+        applicationId twaConfig.applicationId
+        minSdk 21
+        // Keeping your target at 35 is fine; upgrade to 36 when ready.
+        targetSdk 35
+
         versionCode 1
         versionName "1"
 
-        // The name for the application
-        resValue "string", "appName", twaManifest.name
+        // IMPORTANT:
+        // Do NOT generate strings that already exist in res/values/strings.xml:
+        // appName, launcherName, launchUrl, hostName, webManifestUrl, assetStatements,
+        // generatorApp, providerAuthority, orientation
 
-        // The name for the application on the Android Launcher
-        resValue "string", "launcherName", twaManifest.launcherName
+        // Colors referenced by Manifest (@color/...)
+        resValue "color", "colorPrimary", twaConfig.themeColor
+        resValue "color", "colorPrimaryDark", twaConfig.themeColorDark
+        resValue "color", "navigationColor", twaConfig.navigationColor
+        resValue "color", "navigationColorDark", twaConfig.navigationColorDark
+        resValue "color", "navigationDividerColor", twaConfig.navigationDividerColor
+        resValue "color", "navigationDividerColorDark", twaConfig.navigationDividerColorDark
+        resValue "color", "backgroundColor", twaConfig.backgroundColor
 
-        // The URL that will be used when launching the TWA from the Android Launcher
-        def launchUrl = "https://" + twaManifest.hostName + twaManifest.launchUrl
-        resValue "string", "launchUrl", launchUrl
+        // Values referenced by Manifest (@bool/@integer)
+        resValue "bool", "enableNotification", twaConfig.enableNotifications.toString()
+        resValue "integer", "splashScreenFadeOutDuration", twaConfig.splashScreenFadeOutDuration.toString()
 
-        
-
-        
-            // The URL the Web Manifest for the Progressive Web App that the TWA points to. This
-            // is used by Chrome OS and Meta Quest to open the Web version of the PWA instead of
-            // the TWA, as it will probably give a better user experience for non-mobile devices.
-            resValue "string", "webManifestUrl", 'https://radikals.fun/manifest.json'
-        
-
-        
-            // This is used by Meta Quest.
-            resValue "string", "fullScopeUrl", 'https://radikals.fun/'
-        
-
-        
-
-        // The hostname is used when building the intent-filter, so the TWA is able to
-        // handle Intents to open host url of the application.
-        resValue "string", "hostName", twaManifest.hostName
-
-        // This attribute sets the status bar color for the TWA. It can be either set here or in
-        // `res/values/colors.xml`. Setting in both places is an error and the app will not
-        // compile. If not set, the status bar color defaults to #FFFFFF - white.
-        resValue "color", "colorPrimary", twaManifest.themeColor
-
-        // This attribute sets the dark status bar color for the TWA. It can be either set here or in
-        // `res/values/colors.xml`. Setting in both places is an error and the app will not
-        // compile. If not set, the status bar color defaults to #000000 - white.
-        resValue "color", "colorPrimaryDark", twaManifest.themeColorDark
-
-        // This attribute sets the navigation bar color for the TWA. It can be either set here or
-        // in `res/values/colors.xml`. Setting in both places is an error and the app will not
-        // compile. If not set, the navigation bar color defaults to #FFFFFF - white.
-        resValue "color", "navigationColor", twaManifest.navigationColor
-
-        // This attribute sets the dark navigation bar color for the TWA. It can be either set here
-        // or in `res/values/colors.xml`. Setting in both places is an error and the app will not
-        // compile. If not set, the navigation bar color defaults to #000000 - black.
-        resValue "color", "navigationColorDark", twaManifest.navigationColorDark
-
-        // This attribute sets the navbar divider color for the TWA. It can be either 
-        // set here or in `res/values/colors.xml`. Setting in both places is an error and the app 
-        // will not compile. If not set, the divider color defaults to #00000000 - transparent.
-        resValue "color", "navigationDividerColor", twaManifest.navigationDividerColor
-
-        // This attribute sets the dark navbar divider color for the TWA. It can be either 
-        // set here or in `res/values/colors.xml`. Setting in both places is an error and the 
-        //app will not compile. If not set, the divider color defaults to #000000 - black.
-        resValue "color", "navigationDividerColorDark", twaManifest.navigationDividerColorDark
-
-        // Sets the color for the background used for the splash screen when launching the
-        // Trusted Web Activity.
-        resValue "color", "backgroundColor", twaManifest.backgroundColor
-
-        // Defines a provider authority for the Splash Screen
-        resValue "string", "providerAuthority", twaManifest.applicationId + '.fileprovider'
-
-        // The enableNotification resource is used to enable or disable the
-        // TrustedWebActivityService, by changing the android:enabled and android:exported
-        // attributes
-        resValue "bool", "enableNotification", twaManifest.enableNotifications.toString()
-
-        twaManifest.shortcuts.eachWithIndex { shortcut, index ->
-            resValue "string", "shortcut_name_$index", "$shortcut.name"
-            resValue "string", "shortcut_short_name_$index", "$shortcut.short_name"
-        }
-
-        // The splashScreenFadeOutDuration resource is used to set the duration of fade out animation in milliseconds
-        // to be played when removing splash screen. The default is 0 (no animation).
-        resValue "integer", "splashScreenFadeOutDuration", twaManifest.splashScreenFadeOutDuration.toString()
-
-        resValue "string", "generatorApp", twaManifest.generatorApp
-
-        resValue "string", "fallbackType", twaManifest.fallbackType
-
-        resValue "bool", "enableSiteSettingsShortcut", twaManifest.enableSiteSettingsShortcut
-        resValue "string", "orientation", twaManifest.orientation
-
-        
+        // Optional resources (only keep if you are NOT defining them in strings.xml)
+        resValue "string", "fallbackType", twaConfig.fallbackType
+        resValue "bool", "enableSiteSettingsShortcut", twaConfig.enableSiteSettingsShortcut.toString()
     }
-    buildTypes {
-        release {
-            minifyEnabled true
-            if (keystorePropertiesFile.exists()) {
-                signingConfig signingConfigs.release
-            } else {
-                signingConfig signingConfigs.debug
-            }
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    lintOptions {
-        checkReleaseBuilds false
-    }
+
     signingConfigs {
         release {
             if (keystorePropertiesFile.exists()) {
@@ -183,52 +87,92 @@ android {
             }
         }
     }
-}
 
-task generateShorcutsFile {
-    assert twaManifest.shortcuts.size() < 5, "You can have at most 4 shortcuts."
-    twaManifest.shortcuts.eachWithIndex { s, i ->
-        assert s.name != null, 'Missing `name` in shortcut #' + i
-        assert s.short_name != null, 'Missing `short_name` in shortcut #' + i
-        assert s.url != null, 'Missing `icon` in shortcut #' + i
-        assert s.icon != null, 'Missing `url` in shortcut #' + i
+    buildTypes {
+        debug {
+            // default debug signing is fine
+            minifyEnabled false
+        }
+        release {
+            // You can flip to true later if you have proguard rules in place.
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            if (keystorePropertiesFile.exists()) {
+                signingConfig signingConfigs.release
+            } else {
+                signingConfig signingConfigs.debug
+            }
+        }
     }
 
-    def shortcutsFile = new File("$projectDir/src/main/res/xml", "shortcuts.xml")
+    compileOptions {
+        // ABH works fine with Java 8 language level
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
-    def xmlWriter = new StringWriter()
-    def xmlMarkup = new MarkupBuilder(new IndentPrinter(xmlWriter, "    ", true))
+    lint {
+        checkReleaseBuilds false
+    }
+}
 
-    xmlMarkup
-        .'shortcuts'('xmlns:android': 'http://schemas.android.com/apk/res/android') {
-            twaManifest.shortcuts.eachWithIndex { s, i ->
+/**
+ * Generate shortcuts.xml (if you use shortcuts). Safe when list is empty.
+ * Note: Android supports up to 4 dynamic shortcuts here.
+ */
+tasks.register("generateShortcutsFile") {
+    doLast {
+        if (twaConfig.shortcuts == null) return
+
+        assert twaConfig.shortcuts.size() < 5 : "You can have at most 4 shortcuts."
+
+        twaConfig.shortcuts.eachWithIndex { s, i ->
+            assert s.name != null : "Missing `name` in shortcut #$i"
+            assert s.short_name != null : "Missing `short_name` in shortcut #$i"
+            assert s.url != null : "Missing `url` in shortcut #$i"
+            assert s.icon != null : "Missing `icon` in shortcut #$i"
+        }
+
+        def dir = new File("$projectDir/src/main/res/xml")
+        if (!dir.exists()) dir.mkdirs()
+
+        def shortcutsFile = new File(dir, "shortcuts.xml")
+
+        def xmlWriter = new StringWriter()
+        def xmlMarkup = new MarkupBuilder(new IndentPrinter(xmlWriter, "    ", true))
+
+        xmlMarkup.'shortcuts'('xmlns:android': 'http://schemas.android.com/apk/res/android') {
+            twaConfig.shortcuts.eachWithIndex { s, i ->
                 'shortcut'(
-                        'android:shortcutId': 'shortcut' + i,
+                        'android:shortcutId': "shortcut$i",
                         'android:enabled': 'true',
-                        'android:icon': '@drawable/' + s.icon,
-                        'android:shortcutShortLabel': '@string/shortcut_short_name_' + i,
-                        'android:shortcutLongLabel': '@string/shortcut_name_' + i) {
+                        'android:icon': "@drawable/${s.icon}",
+                        'android:shortcutShortLabel': "@string/shortcut_short_name_$i",
+                        'android:shortcutLongLabel': "@string/shortcut_name_$i"
+                ) {
                     'intent'(
                             'android:action': 'android.intent.action.MAIN',
-                            'android:targetPackage': twaManifest.applicationId,
-                            'android:targetClass': twaManifest.applicationId + '.LauncherActivity',
-                            'android:data': s.url)
+                            'android:targetPackage': twaConfig.applicationId,
+                            'android:targetClass': "${twaConfig.applicationId}.LauncherActivity",
+                            'android:data': s.url
+                    )
                     'categories'('android:name': 'android.intent.category.LAUNCHER')
                 }
             }
         }
-    shortcutsFile.text = xmlWriter.toString() + '\n'
+
+        shortcutsFile.text = xmlWriter.toString() + '\n'
+    }
 }
 
-preBuild.dependsOn(generateShorcutsFile)
-
-repositories {
-    
+tasks.named("preBuild").configure {
+    dependsOn("generateShortcutsFile")
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    
-        implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.6.2'
-    
+
+    // Android Browser Helper
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.6.2' // :contentReference[oaicite:3]{index=3}
 }
