--- a/android-twa/app/src/main/AndroidManifest.xml
+++ b/android-twa/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/appName"
         android:manageSpaceActivity="com.google.androidbrowserhelper.trusted.ManageDataLauncherActivity"
         android:supportsRtl="true"
